{
    "name": "Controls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "713eea7e-9fcb-4fb7-884e-a4bf31083c38",
            "actions": [
                {
                    "name": "P1_Movement",
                    "type": "PassThrough",
                    "id": "78ad987d-bcae-4569-b256-5c0d0731dc29",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_Ability1",
                    "type": "Button",
                    "id": "e0c9f44e-492a-405d-baf3-2c597f6196fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_Ability2",
                    "type": "Button",
                    "id": "14f98973-3ab5-49d6-91b9-2ba34ce9d06e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P1_Dash",
                    "type": "Button",
                    "id": "8089b634-4f82-4665-b77f-89c1b4089f46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Movement",
                    "type": "PassThrough",
                    "id": "00b6c4cb-2150-4277-8717-6e1df1e25524",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Ability1",
                    "type": "Button",
                    "id": "77d3fbfb-8ec8-408c-a461-b8a37a2e0a5c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Ability2",
                    "type": "Button",
                    "id": "9bc665a7-dc8c-47a6-9b77-3bd3338d7be7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "P2_Dash",
                    "type": "Button",
                    "id": "1f1d1283-d702-4cf4-b573-5f4c6af05b48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "0a5919df-6e98-4407-9f54-dc162987d1bd",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P1_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "eea587aa-424a-4bc5-b376-8e8187a6f004",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7372fa3d-8889-4268-b7e4-7d389bf1146f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4c5bd7b4-f4e7-46ff-ab42-73a6b82b7927",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "388f383f-72ea-46c8-954d-37815c181252",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e0534b18-670b-4dd9-8ffe-664b45f89a94",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "099807a3-630f-4da4-9f9d-992daf860ccf",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91585c27-db44-4326-9129-e5aaeb85ead5",
                    "path": "<Keyboard>/comma",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b4b932f4-965d-461f-9ea9-ad5016440209",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "079c5812-4add-4720-a9d9-8a3a7f8324e4",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "299c6fd0-c6ad-43a7-a910-68b79ebf568e",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "aca08cd7-7e6b-419d-be5e-19913cd9ceca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b2d0d161-faab-497a-9d64-989e5d72ad39",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fde9d15e-7201-4c16-a9be-8f814ef23aaf",
                    "path": "<Keyboard>/period",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P2_Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9988034c-888a-465c-9593-13d46a787640",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "P1_Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96e4e40a-3f7a-4f08-9ed8-70f171f4a11e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "P2_Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}